fixed stuck nav draw

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -98,9 +98,13 @@ main {
 
 }
 
+.blog-posts {
+    padding: 0px;
+}
 
 .blog-post {
     list-style: none;
+
 
 }
 
